--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ span{
   margin-left: 30px
 }
 p.sum1, p.sum2{
+  font-size: 24px;
   margin-bottom: 10px;
   border: 2px solid blue;
   border-radius: 10px;
