--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-body
-{
-  overscroll-behavior-y: contain;
-}
+
 p, button, li, h1, h2{
   font-weight: 800;
   font-family: sans-serif;
@@ -47,4 +44,14 @@ p.sum1, p.sum2{
 h1{
   border-bottom: 4px dotted black;
   padding-bottom: 10px;
+}
+.add-window{
+  z-index: 2;
+  position: absolute;
+  color: white;
+  background-color: darkblue;
+  width: 96vw;
+  height: max-content;
+  
+  border-radius: 25px;
 }
